doc(stocks_: 阶段A代码规范修改